docs(jfr-proposals): pass 65 — terminator bullet completeness pass
Add missing "No existing JFR event" terminator bullets to 6 "Why
existing events" sections:
- NativeHeapTrim: "No other" → "No existing JFR event" + post-mortem
  diagnostic consequence clause
- ShenandoahMMU: "No Shenandoah-specific" → "No existing JFR event"
  + -Xlog fallback unavailability in post-mortem analysis
- ShenandoahCollectionDecision: new bullet naming absent heuristic
  state fields (_margin_of_error_sd, _cannot_expand_trigger, etc.)
- ZNMethodRegistration: CodeCacheStatistics bullet extended with
  "Without jdk.ZNMethodRegistration" consequence clause
- G1ConcurrentRefinementPolicy: new bullet naming
  adjust_threads_wanted() invisibility in JFR recordings
- G1HeapResize: new bullet listing all absent fields and delta-
  derivability-vs-policy-reasoning gap